<resources>
    <string name="app_name" translatable="false">TodayTodo</string>
    <string name="todo_list" translatable="false">Today ToDo</string>
    <string name="todo_details">Task Details</string>
    <string name="delete_dialog_message">Are you sure you want to delete your TODO:\n\n</string>
    <string name="delete_dialog_title">Delete Task</string>
    <string name="invalid_state">Invalid state! Please try again.</string>
    <string name="err_title_blank">Title cannot be blank</string>
    <string name="your_todo_is_empty">Your TODO is empty.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="created">Created: </string>
    <string name="save_todo">SAVE TODO</string>
    <string name="complete_todo">Complete</string>
    <string name="fragment_todo_details_status_text">Completed:</string>
    <string name="time_left_format">%d hours left</string>
    <string name="ressurect_todo">Reset</string>
    <string name="ressurect_dialog_title">Reset Todo</string>
    <string name="ressurect_dialog_message">Would you like to reset task?</string>
    <string name="cancel_todo">Cancel task</string>
</resources>
