<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightBackground"
            android:clickable="true"
            android:fillViewport="true"
            android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_list_row_bg"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/fragment_todo_details_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxLength="25"
                android:maxLines="1"
                android:inputType="textAutoCorrect"
                android:singleLine="true"
                android:textSize="@dimen/text_big"
                android:imeOptions="actionDone"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:id="@+id/fragment_todo_details_et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:maxLength="150"
                android:maxLines="5"
                android:textSize="@dimen/text_big"
                />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/fragment_todo_details_ll_date_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:textSize="@dimen/text_big"
                />

            <TextView
                android:id="@+id/fragment_todo_details_tv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:drawableEnd="@android:drawable/ic_menu_today"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_small"
                android:textStyle="italic"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_todo_details_ll_status_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_todo_details_status_text"
                android:textSize="@dimen/text_big"
                />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_todo_details_cx_status"
                android:checked="false"/>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragment_todo_details_btn_cancel_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/drawable_button_bg"
                android:padding="10dp"
                android:text="@string/cancel_todo"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/fragment_todo_details_btn_save_todo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/fragment_todo_details_btn_save_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:background="@drawable/drawable_button_bg"
                android:padding="10dp"
                android:text="@string/save_todo"
                android:textColor="@android:color/white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>